# Store_API

./: pyproject.toml
store/: main.py
store/core/: config.py
tests/schemas/: test_product.py
